--- a/cropping-images-with-object-fit/flow.html
+++ b/cropping-images-with-object-fit/flow.html
@@ -13,7 +13,7 @@
 
     <article>
         <header>
-            <img src="/cropping-images-with-object-fit/images/globe-md.jpg" alt="Globe at the entrance of Texas A&M International University">
+            <img src="../cropping-images-with-object-fit/images/globe-md.jpg" alt="Globe at the entrance of Texas A&M International University">
             <div class="headlines">
                 <div>
                     <h1>Resilience</h1>
