--- a/cropping-images-with-object-fit/index.html
+++ b/cropping-images-with-object-fit/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Cropping Images with Object Fit</title>
-    <link rel="stylesheet" href="/cropping-images-with-object-fit/css/normalize.css"/>
-    <link rel="stylesheet" href="/cropping-images-with-object-fit/css/universal.css"/>
-    <link rel="stylesheet" href="/cropping-images-with-object-fit/css/style.css">
+    <link rel="stylesheet" href="../cropping-images-with-object-fit/css/normalize.css"/>
+    <link rel="stylesheet" href="../cropping-images-with-object-fit/css/universal.css"/>
+    <link rel="stylesheet" href="../cropping-images-with-object-fit/css/style.css">
 </head>
 
 
@@ -16,7 +16,7 @@
 
     <article>
         <header>
-            <img src="/cropping-images-with-object-fit/images/globe-md.jpg" alt="Globe at the entrance of Texas A&M International University">
+            <img src="../cropping-images-with-object-fit/images/globe-md.jpg" alt="Globe at the entrance of Texas A&M International University">
             <div class="headlines">
                 <div>
                     <h1>Resilience</h1>
