--- a/flexibility-and-the-fold/2013.html
+++ b/flexibility-and-the-fold/2013.html
@@ -6,7 +6,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Flexibility and the Fold</title>
-        <link rel="stylesheet" href="/flexibility-and-the-fold/css/style.css">
+        <link rel="stylesheet" href="../flexibility-and-the-fold/css/style.css">
 </head>
 
 <body class="o-body o-body_b">
