--- a/innovative-and-practical-graphic-design-with-css-grid/flow.html
+++ b/innovative-and-practical-graphic-design-with-css-grid/flow.html
@@ -12,7 +12,7 @@
 
     <main>
 
-        <img class="logo" src="/innovative-and-practical-graphic-design-with-css-grid/images/planetarium-logo.png" alt="Planetarium Logo">
+        <img class="logo" src="../innovative-and-practical-graphic-design-with-css-grid/images/planetarium-logo.png" alt="Planetarium Logo">
         <header>
             <h1>TAMIU Lamar Bruni Vergara Planetarium</h1>
             <h2>April 2022</h2>
