--- a/innovative-and-practical-graphic-design-with-css-grid/index.html
+++ b/innovative-and-practical-graphic-design-with-css-grid/index.html
@@ -6,14 +6,14 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Innovative and Practical Graphic Design with CSS Grid</title>
-    <link rel="stylesheet" href="/innovative-and-practical-graphic-design-with-css-grid/css/style.css">
+    <link rel="stylesheet" href="../innovative-and-practical-graphic-design-with-css-grid/css/style.css">
 </head>
 
 <body>
 
     <main>
 
-        <img class="logo" src="/innovative-and-practical-graphic-design-with-css-grid/images/planetarium-logo.png" alt="Planetarium Logo">
+        <img class="logo" src="../innovative-and-practical-graphic-design-with-css-grid/images/planetarium-logo.png" alt="Planetarium Logo">
         <header>
             <h1>TAMIU Lamar Bruni Vergara Planetarium</h1>
             <h2>April 2022</h2>
