--- a/easy-layouts-with-css-grid/index.html
+++ b/easy-layouts-with-css-grid/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Easy Layouts with CSS Grid</title>
-    <link rel="stylesheet" href="/easy-layouts-with-css-grid/css/style.css">
+    <link rel="stylesheet" href="../easy-layouts-with-css-grid/css/style.css">
 </head>
 
 <body class="o-body">
