--- a/obliterating-boxiness-with-css-shapes/index.html
+++ b/obliterating-boxiness-with-css-shapes/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Obliterating Boxiness with CSS Shapes</title>
-    <link rel="stylesheet" href="/obliterating-boxiness-with-css-shapes/css/style.css">
+    <link rel="stylesheet" href="../obliterating-boxiness-with-css-shapes/css/style.css">
 </head>
 
   <body>
@@ -18,7 +18,7 @@
       
       <p>"For over 50 years, TAMIU’s mission has been laser-focused on making higher education accessible, affordable, and excellent. I encourage students and their families to explore the Dusty Promise. The Dusty Promise is a promise made and a promise we are proud to keep." <em>- Pablo Arenaz Ph.D, TAMIU President</em></p> 
 
-      <img src="/obliterating-boxiness-with-css-shapes/images/dusty-promise.png" alt="Female TAMIU student with backpack" class="tomato">
+      <img src="../obliterating-boxiness-with-css-shapes/images/dusty-promise.png" alt="Female TAMIU student with backpack" class="tomato">
       
       <p>The Dusty Promise Program is designed to cover <strong>tuition</strong> and <strong>mandatory fees</strong> by first utilizing federal, state, and institutional aid, like Federal Pell and TEXAS Grants, scholarships and other gift aid. The Dusty Promise Program will cover any remaining tuition and mandatory fees not covered by these programs. View our comprehensive <a href="https://www.tamiu.edu/finaid/faq/dusty-promise-frequently-asked-questions-2022-2023.pdf" target="_blank">Dusty Promise FAQs</a> for more details.</p>
 
