--- a/overlap-on-the-web/index.html
+++ b/overlap-on-the-web/index.html
@@ -6,14 +6,14 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Overlap on the Web</title>
-    <link rel="stylesheet" href="/overlap-on-the-web/css/style.css">
+    <link rel="stylesheet" href="../overlap-on-the-web/css/style.css">
 </head>
 
 <body>
     <main>
 
 <article>
- <img src="/overlap-on-the-web/images/black-dance-2022-website-image-01-sm.jpg" alt="Male dancer lifting up a female dancer">
+ <img src="../overlap-on-the-web/images/black-dance-2022-website-image-01-sm.jpg" alt="Male dancer lifting up a female dancer">
   <h2><span>Dallas Black Dance Theatre</span></h2>
 </article>
 
