--- a/unlocking-the-power-of-css-overrides/flow.html
+++ b/unlocking-the-power-of-css-overrides/flow.html
@@ -26,6 +26,9 @@
     <p>A Texas A&M International University (TAMIU) faculty member has been named one of three individual statewide recipients of the Chancellor’s Academy of Teacher Educators (CATE) Award presented by Texas A&M University System Chancellor John Sharp.</p>
 
     <p>Dr. Lola Norris, associate professor of Spanish and Translation in the College of Arts & Sciences, was presented the Award during the recent Chancellor’s Century Council Annual Meeting in College Station.  The Academy acknowledges teaching excellence and is supported by the Chancellor’s Century Council, a group committed to advancing the future of higher education in Texas.</p>
+    
+    <img src="../unlocking-the-power-of-css-overrides/images/tamiucatenorris.jpg" alt="Chancellor Sharp and Dr. Lola Norris"/>
+    <em>Texas A&M University System Chancellor John Sharp congratulates Dr. Lola Norris on her  Chancellor's Academy of  Teacher Educators (CATE) Award</em>
 
     <p>Recipients of the distinguished CATE Award receive a specially designed commemorative medallion bearing the seal of the A&M System, a Certificate, and a stipend.</p>
 
