--- a/unlocking-the-power-of-css-overrides/style-2.html
+++ b/unlocking-the-power-of-css-overrides/style-2.html
@@ -6,7 +6,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Unlocking the Power of CSS Overrides</title>
-    <link rel="stylesheet" href="/unlocking-the-power-of-css-overrides/css/style-2.css">
+    <link rel="stylesheet" href="../unlocking-the-power-of-css-overrides/css/style-2.css">
 </head>
 
 <body>
@@ -28,7 +28,7 @@
 
     <p>Dr. Lola Norris, associate professor of Spanish and Translation in the College of Arts & Sciences, was presented the Award during the recent Chancellor’s Century Council Annual Meeting in College Station.  The Academy acknowledges teaching excellence and is supported by the Chancellor’s Century Council, a group committed to advancing the future of higher education in Texas.</p>
     
-    <img src="images/tamiucatenorris.jpg" alt="Chancellor Sharp and Dr. Lola Norris"/>
+    <img src="../unlocking-the-power-of-css-overrides/images/tamiucatenorris.jpg" alt="Chancellor Sharp and Dr. Lola Norris"/>
     <em>Texas A&M University System Chancellor John Sharp congratulates Dr. Lola Norris on her  Chancellor's Academy of  Teacher Educators (CATE) Award</em>
 
     <p>Recipients of the distinguished CATE Award receive a specially designed commemorative medallion bearing the seal of the A&M System, a Certificate, and a stipend.</p>
