--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/style.css" />
 </head>
 
-<body>
+<body class="o-body_portfolio">
     <header>
         <h1>ana maría</h1>
         <p>Portfolio</p>
@@ -38,18 +38,28 @@
 
             <article>
                 <h3>Uconnect Portal</h3>
-                <img src="#" alt="Uconnect website">
-                <p><em>No longer online.</em></p>
+                <img src="images/past-04_uconnect-00.jpg" alt="Uconnect website">
+				 <p><em>Student portal. No longer online.</em></p>
+				<ul>
+                <li><a target="_blank" href="images/past-04_uconnect-01.jpg">Log-in Page</a></li>
+                <li><a target="_blank" href="images/past-04_uconnect-02.jpg">Homepage</a></li>
+                <li><a target="_blank" href="images/past-04_uconnect-03.jpg">Example page</a></li>
+                </ul>
+               
             </article>
 
             <article>
                 <h3>TAMIU Uprint</h3>
-                <p><em>Assisted with online branding.</em></p>
+				<img src="images/past-05.png" alt="TAMIU Uprint">
+                <p><em>On-campus web printing. Assisted with online branding.</em></p>
+				<a target="_blank" href="https://uprint.tamiu.edu"><button>TAMIU Uprint</button></a>
             </article>
 
             <article>
-                <h3>TAMIU OneCard</h3>
-                <p><em>Assisted with online branding.</em></p>
+                <h3>TAMIU OneWeb</h3>
+				<img src="images/past-06.png" alt="TAMIU OneWeb">
+                <p><em>Campus Card Services portal. Assisted with online branding.</em></p>
+				<a target="_blank" href="https://uprint.tamiu.edu"><button>TAMIU OneWeb</button></a>
             </article>
         </section>
 
@@ -100,7 +110,7 @@
 
             <article>
                 <h3>Flexibility and the Fold</h3>
-                <img src="images/future-02.png" alt="Image on top of a flexible menu">
+                <img src="images/future-02.png" alt="Fold demo">
                 <ul>
                 <li><a target="_blank" href="flexibility-and-the-fold/flow.html">No styling</a></li>
                 <li><a target="_blank" href="flexibility-and-the-fold/2008.html">2008 feel</a></li>
@@ -116,6 +126,42 @@
                 <ul>
                 <li><a target="_blank" href="innovative-and-practical-graphic-design-with-css-grid/flow.html">No styling</a></li></ul>
                 <a target="_blank" href="innovative-and-practical-graphic-design-with-css-grid/index.html"><button>Graphic Design Demo</button></a>
+            </article>
+			
+			<article>
+                <h3>Unlocking the Power of CSS Overrides</h3>
+                <img src="images/future-overrides.png" alt="Overrides demo">
+                <ul>
+                <li><a target="_blank" href="unlocking-the-power-of-css-overrides/flow.html">No styling</a></li>
+                <li><a target="_blank" href="unlocking-the-power-of-css-overrides/style-1.html">Typical Header with title & background, the height of the space needed</a></li>
+                <li><a target="_blank" href="unlocking-the-power-of-css-overrides/style-2.html">Cover Sheet Header, taking up 100% of viewport</a></li>
+				<li><a target="_blank" href="unlocking-the-power-of-css-overrides/style-2.html">Cover Sheet Header, with tweaks for old IE</a></li>
+                </ul>
+                
+            </article>
+			
+			<article>
+                <h3>Obliterating Boxiness with CSS Shapes</h3>
+                <img src="images/future-shapes.png" alt="CSS Shapes demo">
+                <ul>
+                <li><a target="_blank" href="obliterating-boxiness-with-css-shapes/flow.html">No styling</a></li></ul>
+                <a target="_blank" href="obliterating-boxiness-with-css-shapes/index.html"><button>CSS Shapes Demo</button></a>
+            </article>
+			
+			<article>
+                <h3>Overlap on the Web</h3>
+                <img src="images/future-overlap.png" alt="Overlap demo">
+                <ul>
+                <li><a target="_blank" href="overlap-on-the-web/flow.html">No styling</a></li></ul>
+                <a target="_blank" href="overlap-on-the-web/index.html"><button>CSS Shapes Demo</button></a>
+            </article>
+			
+			<article>
+                <h3>Cropping Images with Object Fit</h3>
+                <img src="images/future-crop.png" alt="Object Fit demo">
+                <ul>
+                <li><a target="_blank" href="cropping-images-with-object-fit/flow.html">No styling</a></li></ul>
+                <a target="_blank" href="cropping-images-with-object-fit/index.html"><button>Object Fit Demo</button></a>
             </article>
 
         </section>
