--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             </article>
             <article>
                 <h3>TAMIU Insider</h3>
-                <img src="#" alt="TAMIU Insider Sharepoint site"><a target="_blank" href="https://go.tamiu.edu/insider"><button>TAMIU Insider</button></a>
+                <img src="images/present-insider.png" alt="TAMIU Insider Sharepoint site"><a target="_blank" href="https://go.tamiu.edu/insider"><button>TAMIU Insider</button></a>
             </article>
 
 
